--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <div class="container"></div>
+        <div vlass="todo-app">
+            <h2>To do list</h2>
+        </div>
     </body>
 </html>
